# camera_calibration

./: .gitignore  Falcons_DeWarp_BETA.py  Falcons_DeWarp_BETA_v4.py  Falcons_DeWarp_BETA_v7.py  README.md  calibration-gui.py  pyproject.toml  requirements.txt  setup.cfg
src/falcons/DeWarp/: __init__.py  application.py  cameraCalibration.py  common.py  config.py  falcon_config.yaml  main.py  perspectiveWarp.py  pylonThread.py  soccer_field.py  videoinput.py  warper.py  widget.py
src/falcons/dewarp/: main.py
test/: Falcons_DeWarp_BETA.py  Network-test.py  Pwarp-tuning-test.py  R13-cam0-corners.vnl  R13-cam0-opencv8.cameramodel  R13-cam0-splined.cameramodel  Soccer_field-test.py  fetch_images.py  mrcal-info.txt  queryLUT.py
test/test_calibration/: fisheye_calibrate.py  fisheye_undistort.py
test/test_calibration/V1-Pylon-R4/: data_20240523214234.json  data_20240525143508.json  extrinsic_20240523214211.txt  intrinsic_20240523214211.txt
