[metadata]
name = falcons.dewarp
version = attr: falcons.dewarp.__version__
author = ASML Falcons
description = Dewarp tool to map robot camera pictures to 2d top down plane
long_description = file: README.md
keywords = dewarp, robocup
license = MIT license


[options]
package_dir = =src
packages = find_namespace:
install_requires = 
    numpy
    PyQt5
    # opencv
include_package_data = true
python_requires = >= 3.8

[options.packages.find]
where=src
include = falcons.*

